--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>vue-time-picker</title>
-  </head>
-  <body>
-    <app></app>
+</head>
+
+<body>
+    <div class="app">
+        <app></app>
+    </div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
