setup the vuex2.0 store

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="app">
+    <div id="app">
         <app></app>
     </div>
     <!-- built files will be auto injected -->
