--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title>vue-time-picker</title>
-</head>
-
-<body>
-    <div id="app">
-        <app></app>
-    </div>
-    <!-- built files will be auto injected -->
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>vue-time-picker</title><link href=/static/css/app.37347eab4e62e87ceddf2f06d2d1e068.css rel=stylesheet></head><body><div id=app><app></app></div><script type=text/javascript src=/static/js/manifest.e45993a53b3d4b55f9b7.js></script><script type=text/javascript src=/static/js/vendor.9144ceadfc1ee66b59a0.js></script><script type=text/javascript src=/static/js/app.55530c4a9407ba23b0df.js></script></body></html>
