--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
-<!DOCTYPE html><html>
+<!DOCTYPE html>
+<html>
 
 <head>
-    <meta charset=utf-8>
-    <title>vue-time-picker</title>
-    <link href='./static/css/app.03ea8e95385004008951db75ea1792ef.css' rel=stylesheet>
+  <meta charset=utf-8>
+  <title>vue-time-picker</title>
+  <link href=./static/css/app.fae6b51f2b43be3340781c284cd8925c.css rel=stylesheet>
 </head>
 
 <body>
-    <div id=app>
-        <app></app>
-    </div>
-    <script type=text/javascript src='./static/js/manifest.a3e4f8e9783d035f36a0.js'></script>
-    <script type=text/javascript src='./static/js/vendor.9144ceadfc1ee66b59a0.js'></script>
-    <script type=text/javascript src='./static/js/app.0480114063ec3b35020c.js'></script>
+  <div id=app>
+    <app></app>
+  </div>
+  <script type=text/javascript src=./static/js/manifest.6ab41e57f4974033a47d.js></script>
+  <script type=text/javascript src=./static/js/vendor.61e1dd39b6b66e32ff28.js></script>
+  <script type=text/javascript src=./static/js/app.461f086006e187f44d5c.js></script>
 </body>
 
 </html>
